@@ -1,0 +1,9 @@
+Title: arris_cmts_cpu,arris_cmts_temp: New Checks for Arris CMTS Devices ( Temperature and CPU Utilization)
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.5i6
+Date: 1407495598
+Class: feature
+
+
