@@ -1,0 +1,65 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2013             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# ails.  You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+arris_cmts_temp_default_levels = ( 40, 46 )
+
+def inventory_arris_cmts_temp(info):
+    for line in info:
+        # only devices with not default temperature
+        if line[1] != '999':
+            yield line[0], 'arris_cmts_temp_default_levels'
+
+def check_arris_cmts_temp(item, params, info):
+    for name, temp in info:
+        if name == item:
+            temp = int(temp)
+            warn, crit = params
+            infotext = "Temperature is: %.1f °C " % temp
+            levels = " (warn/crit at %.1f/%.1f °C)" % (warn, crit)
+            perfdata = [ ( "temperature", temp, warn, crit ) ]
+            if temp >= crit:
+                yield 2, infotext + levels, perfdata
+            elif temp >= warn:
+                yield 1, infotext + levels, perfdata
+            else:
+                yield 0, infotext, perfdata
+            return
+    yield 3, "Temperature Sensor not found"
+
+check_info["arris_cmts_temp"] = {
+    "check_function"        : check_arris_cmts_temp,
+    "inventory_function"    : inventory_arris_cmts_temp,
+    "service_description"   : "Temperature %s",
+    "has_perfdata"          : True,
+    "snmp_scan_function"    : arris_cmts_scan_function,
+    "snmp_info"             : ( ".1.3.6.1.4.1.4998.1.1.10.1.4.2.1", [
+                                          3, # cardName
+                                          29, # Card Temperature
+                                          ] ),
+    "group"                 : "hw_temperature",
+    "includes"              : [ "arris_cmts.include" ]
+}
+
