@@ -11,6 +11,7 @@
     * 0196 esx_vsphere_hostsystem: New subcheck for maintenance mode...
     * 0197 check_uniserv: New Check for Uniserv Data Management Services...
     * 0199 veeam_client: Check rewritten to get a nicer output
+    * 0200 arris_cmts_cpu,arris_cmts_temp: New Checks for Arris CMTS Devices ( Temperature and CPU Utilization)
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
